# Axiomind

./: .gitattributes  .gitignore  Cargo.toml
.githooks/: pre-commit
.kiro/specs/comprehensive-cli-testing/: design.md  requirements.md  tasks.md
.kiro/specs/rust-web-server/: tasks.md
.kiro/specs/system-and-cli/: design.md  requirements.md  tasks.md
docs/: ARCHITECTURE.md  CLI.md  GAME_RULES.md  README.md  RUNBOOK.md  STACK.md
docs/decisions/: 0001-hand-history-jsonl.md  0002-persistence-sqlite.md  0003-monorepo-structure.md  0004-git-and-branching.md
rust/cli/: Cargo.toml
rust/cli/src/: config.rs  lib.rs  main.rs  ui.rs
rust/cli/tests/: README.md  integration.rs  test_cli_commands.rs  test_dataset.rs  test_deal_rng.rs  test_eval.rs  test_export.rs  test_play.rs  test_play_session.rs  test_replay.rs  test_session_progression.rs  test_sim.rs  test_sim_resume.rs  test_stats.rs  test_tools.rs  test_ui.rs  test_validation.rs  test_workflows.rs
rust/engine/: Cargo.toml
rust/engine/src/: cards.rs  deck.rs  engine.rs  errors.rs  game.rs  hand.rs  lib.rs  logger.rs  player.rs  pot.rs  rules.rs
rust/engine/tests/: test_betting_validation.rs  test_burn_positions.rs  test_deck_shuffling.rs  test_eval_perf.rs  test_game_flow.rs  test_game_setup.rs  test_hand_eval_optimized.rs  test_hand_evaluation.rs  (+7 more)
rust/web/: Cargo.toml
rust/web/src/: events.rs  lib.rs  server.rs  session.rs  static_handler.rs
rust/web/src/handlers/: game.rs  mod.rs
rust/web/static/: index.html
rust/web/static/css/: app.css
rust/web/tests/: game_api.rs  scaffold.rs
(+14 files in other folders)
