[package]
name = "axm_web"
version = "0.1.0"
edition = "2021"

[lib]
name = "axm_web"
path = "src/lib.rs"

[dependencies]
warp = { version = "0.3", default-features = false, features = ["tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
